<resources>
    <string name="app_name">Land Go !</string>
    <string name="first_slide">Going Somewhere</string>
    <string name="second_slide">View Map</string>
    <string name="third_slide">Search For A Landmark</string>
    <string name="forth_slide">Navigate</string>
    <string name="fifth_slide">Store Your Favourite Landmark</string>
    <string name="first_slide_desc">Heading somewhere but you would really like to skip the hassle of having found out about the local spots of the area you\'re keen on visiting ,well look no further as Land Go! is here to do exactly that for you. So kick back and relax let us do all the work.</string>
    <string name="second_slide_desc">View the map embedded in the app to view points of interest around your current location or preferred landmark you would like to visit. All these will be within the radius of the selected landmark or your current location. </string>
    <string name="third_slide_desc">Use the search feature to search for any landmark that might have sparked your interest. Search results will vary depending on the saving preferred landmark type.</string>
    <string name="forth_slide_desc">Done with the search why not head to the searched destination using the navigate feature that will give you directions to the searched landmark. You can chose for a voice or muted navigation with the best calculated route to the location.</string>
    <string name="fifth_slide_desc">You can save your favourite landmark should you want to visit them at a later date or for the sake of just having a saved landmark well whatever the reason your favourite landmarks will be store in list form.</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="getStarted_btn">Get Started</string>
    <string name="historic_landmark">Historic Landmarks</string>
    <string name="popular_landmark">Popular Landmarks</string>
    <string name="modern_landmark">Modern Landmarks</string>
    <string name="park">Parks</string>
    <string name="graffiti">Graffiti</string>
    <string name="statue">Statues</string>
    <string name="hospital">Hospitals</string>
    <string name="restaurant">Restaurants</string>
    <string name="featured">Featured Landmarks</string>
    <string name="featured_desc">Here\'s A Few Of Our Recommended Landmarks That Might Interest You. Ranging From Parks, Statues , Graffiti and Many More Locations</string>
    <string name="search_here">Search Here</string>
    <string name="points_of_interest">Points Of Interest</string>
    <string name="browse_map">Browse Map</string>
    <string name="landmark_categories">Landmark Categories</string>
    <string name="landmark_categories_viewAll">View All</string>
    <string name="big_bird_text">Big Bird Graffiti By ROA</string>
    <string name="big_bird_desc">20 Kruger Street, Maboneng</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="view_map">View Map</string>
    <string name="saved_landmarks">Saved Landmarks</string>
    <string name="profile">Profile Settings</string>
    <string name="app_slogan">Specialists In The Art Of Travel</string>
    <string-array name="units_measure">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="interface_theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string-array name="preferred_landmark_type">
        <item>Historical</item>
        <item>Popular</item>
        <item>Graffiti</item>
        <item>Park</item>
        <item>Modern</item>
        <item>Statue</item>
        <item>Other</item>

    </string-array>
    <string name="access_token" translatable="false">pk.eyJ1Ijoia2FyYWJvLXNlbnBhaSIsImEiOiJjbDhyazZtZmYwbmcyM3VuMWJldHVtZHlsIn0.jvhKtMMYYyXvHKI9PqmXPg</string>
    <string name="title_activity_app_settings">AppSettings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dropoff_dialog_negative_text">Cancel</string>
    <string name="dropoff_dialog_positive_text">Start next</string>
    <string name="dropoff_dialog_text">Do you want to navigate to next destination?</string>
    <string name="feedback_bad_route">Inefficient or\nBad Route</string>
    <string name="feedback_confusing_instruction">Confusing\nInstruction</string>
    <string name="feedback_missing_exit">Missing\nExit</string>
    <string name="feedback_missing_road">Missing\nRoad</string>
    <string name="feedback_not_allowed">Not\nAllowed</string>
    <string name="feedback_road_closure">Road\nClosed</string>
    <string name="feedback_submitted">Feedback Submitted</string>
    <string name="muted">Muted</string>
    <string name="navigation_guidance_day" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>
    <string name="navigation_guidance_night" translatable="false">mapbox://styles/mapbox/navigation-guidance-night-v4</string>
    <string name="navigation_running" translatable="false">navigation_running</string>
    <string name="navigation_view_instance_state" translatable="false">navigation_view_instance_state</string>
    <string name="re_center">RE-CENTER</string>
    <string name="report_feedback">Report feedback</string>
    <string name="report_problem">Report Problem</string>
    <string name="rerouting">Rerouting…</string>
    <string name="unmuted">Unmuted</string>
</resources>